# santa-challenge

./: .gitignore  CMakeLists.txt  README.md  build.sh  data_analysis.py  runProg.sh
.github/workflows/: generate-doxygen-docu.yml  santa-challenge-unit-tests.yml
data/: candidate_2023-12-17_17-22.csv  candidate_2023-12-19_00-44.csv  example_data.csv  nn_Best.csv  output_dist.txt  small_gifts.csv
doc/doxygen/: MAINPAGE.md  doxygenConfig
doc/doxygen/html/: annotated.html  classes.html  dir_04f2ecc425faf0d475a3caf484e551f3.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  hierarchy.html  index.html
doc/doxygen/html/d3/d06/: LoadStrategy_8hpp_source.html
doc/doxygen/html/d3/d69/: structCoordinate-members.html
doc/doxygen/html/d4/d86/: classSanta-members.html
doc/doxygen/html/d6/d97/: classNaiveStrategy.html
doc/doxygen/html/d6/db0/: classNearestLoadingStrategy.html
doc/doxygen/html/d6/dde/: classGiftIDFactory-members.html
doc/doxygen/html/d7/d03/: classIGiftFactory-members.html
doc/doxygen/html/d7/d71/: classCompareDistToRefStrategy-members.html
doc/doxygen/html/d7/d7a/: classCompareWeightStrategy.html
doc/doxygen/html/d7/df3/: classNaiveStrategy-members.html
doc/doxygen/html/d8/db9/: classCompareWeightStrategy-members.html
doc/doxygen/html/d8/dcc/: classGiftWeightFactory.html
doc/doxygen/html/d9/d48/: classNaiveLoadingStrategy.html
doc/doxygen/html/da/da0/: Santa_8hpp.html
doc/doxygen/html/dc/d7a/: Gift_8hpp.html
doc/doxygen/html/dc/db6/: classSimulatedAnnealingStrategy.html
doc/doxygen/html/de/d10/: classIGiftFactory.html
doc/doxygen/html/df/dc4/: classGiftDistanceFactory-members.html
doc/doxygen/html/search/: all_2.js  all_5.js  all_6.js  all_b.js  all_c.js  enums_0.js  files_0.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_3.js  functions_4.js  functions_6.js  functions_9.js  functions_b.js  searchdata.js
docs/: _config.yml  about.md  index.html  main_index.html  main_index.md  main_style.css
docs/doxygen/: MAINPAGE.md  doxygenConfig
docs/doxygen/html/: annotated.html  classes.html  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_bf98ff0daefb3983824d395793f723ed.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_enum.html  globals_func.html  hierarchy.html  index.html
docs/doxygen/html/d0/d05/: DistributeStrategy_8hpp.html  DistributeStrategy_8hpp_source.html
docs/doxygen/html/d0/d0e/: misc_8hpp.html  misc_8hpp_source.html
docs/doxygen/html/d0/d81/: classCompareDistanceStrategy.html
docs/doxygen/html/d0/da2/: TripManager_8hpp.html  TripManager_8hpp_source.html
docs/doxygen/html/d1/d0b/: classTripManager.html
docs/doxygen/html/d1/d1f/: ICompareStrategy_8hpp.html  ICompareStrategy_8hpp_source.html
docs/doxygen/html/d1/d57/: GiftFactory_8hpp.html  GiftFactory_8hpp_source.html
docs/doxygen/html/d1/d60/: structCoordinate.html
docs/doxygen/html/d2/db5/: classICompareStrategy-members.html
docs/doxygen/html/d3/d06/: LoadStrategy_8hpp.html  LoadStrategy_8hpp_source.html
docs/doxygen/html/d3/d65/: classSanta.html
docs/doxygen/html/d3/d69/: structCoordinate-members.html
docs/doxygen/html/d3/d70/: classCompareIDStrategy.html
docs/doxygen/html/d3/db0/: classICompareStrategy.html
docs/doxygen/html/d3/dc4/: classGift-members.html
docs/doxygen/html/d4/d22/: classGift.html
docs/doxygen/html/d4/d86/: classSanta-members.html
docs/doxygen/html/d5/d54/: classGiftWeightFactory-members.html
docs/doxygen/html/d5/d97/: classCompareIDStrategy-members.html
docs/doxygen/html/d5/da8/: classNaiveLoadingStrategy-members.html
docs/doxygen/html/d5/df0/: classClusterLoadingStrategy.html
docs/doxygen/html/d6/d35/: classNNLoadingStrategy-members.html
docs/doxygen/html/d6/d97/: classNaiveStrategy.html
docs/doxygen/html/d6/da9/: classIDistributeStrategy-members.html
docs/doxygen/html/d6/db0/: classNearestLoadingStrategy.html
docs/doxygen/html/d6/dde/: classGiftIDFactory-members.html
docs/doxygen/html/d7/d0a/: classSimulatedAnnealingStrategy-members.html
docs/doxygen/html/d7/d71/: classCompareDistToRefStrategy-members.html
docs/doxygen/html/d7/d7a/: classCompareWeightStrategy.html
docs/doxygen/html/d7/df3/: classNaiveStrategy-members.html
docs/doxygen/html/d8/d6a/: classNearestLoadingStrategy-members.html
docs/doxygen/html/d8/db9/: classCompareWeightStrategy-members.html
docs/doxygen/html/d8/dcc/: classGiftWeightFactory.html
docs/doxygen/html/d8/df5/: classCompareDistToRefStrategy.html
docs/doxygen/html/d9/d48/: classNaiveLoadingStrategy.html
docs/doxygen/html/da/d03/: classClusterLoadingStrategy-members.html
docs/doxygen/html/da/d58/: classGiftDistanceFactory.html
docs/doxygen/html/da/d7b/: classCompareDistanceStrategy-members.html
docs/doxygen/html/da/da0/: Santa_8hpp.html  Santa_8hpp_source.html
docs/doxygen/html/da/dc1/: classNNLoadingStrategy.html
docs/doxygen/html/da/df6/: classIDistributeStrategy.html
docs/doxygen/html/dc/d7a/: Gift_8hpp.html  Gift_8hpp_source.html
docs/doxygen/html/dc/d81/: classILoadStrategy-members.html
docs/doxygen/html/dc/db6/: classSimulatedAnnealingStrategy.html
docs/doxygen/html/search/: all_0.js  all_1.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  files_1.js  files_4.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  pages_0.js
docs/figures/: santa-challenge.drawio
include/: DistributeStrategy.hpp  Gift.hpp  GiftFactory.hpp  ICompareStrategy.hpp  LoadStrategy.hpp  Santa.hpp  TripManager.hpp  algorithm.hpp  formulas.hpp  misc.hpp
source/: CMakeLists.txt  DistributeStrategy.cpp  Gift.cpp  LoadStrategy.cpp  Santa.cpp  TripManager.cpp  algorithm.cpp  formulas.cpp  main.cpp  misc.cpp
unittests/: CMakeLists.txt  unittest_Formulas.cpp  unittest_Gift.cpp  unittest_Module.cpp  unittest_SA.cpp  unittest_Santa.cpp  unittest_misc.cpp
(+6 files in other folders)
